ADD DATABASE AND WEB INFORMATION

--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: sohaib
+    databaseName: sohaib
+    user: sohaib_user
 
 services:
   - type: web
-    name: mysite
+    name: sohaib-budget
     env: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: sohaib
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
